# serenity-utils

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
examples/: Cargo.toml
examples/e01_prompts/: Cargo.toml
examples/e01_prompts/src/: main.rs
examples/e02_menu/: Cargo.toml
examples/e02_menu/src/: main.rs
examples/e03_conversion/: Cargo.toml
examples/e03_conversion/src/: main.rs
src/: conversion.rs  error.rs  formatting.rs  lib.rs  menu.rs  misc.rs  prelude.rs
src/builder/: embed.rs  message.rs  mod.rs  prelude.rs
src/prompt/: message.rs  mod.rs  reaction.rs
tests/: test_builder.rs  test_formatting.rs
