[package]
name = "serenity_utils"
version = "0.3.0"
authors = ["AriusX7 <icyligii@gmail.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "A library to provide additional utilies for Discord bots created with serenity."
homepage = "https://github.com/AriusX7/serenity-utils"
repository = "https://github.com/AriusX7/serenity-utils"
keywords = ["discord", "serenity", "utilities", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cache", "rustls_backend"]

cache = ["serenity/cache"]
native_tls_backend = ["serenity/native_tls_backend"]
rustls_backend = ["serenity/rustls_backend"]

[dependencies.serenity]
version = "0.9.0-rc.0"
default-features = false
features = ["client", "collector", "gateway", "model"]
