[package]
name = "serenity_utils"
version = "0.6.1"
authors = ["AriusX7 <icyligii@gmail.com>"]
edition = "2018"
license = "ISC"
readme = "README.md"
description = "A library to provide additional utilies for Discord bots created with serenity."
homepage = "https://github.com/AriusX7/serenity-utils"
repository = "https://github.com/AriusX7/serenity-utils"
keywords = ["discord", "serenity", "utilities", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cache", "rustls_backend"]
default_native_tls = ["cache", "native_tls_backend"]

cache = ["serenity/cache"]
rustls_backend = ["tokio", "serenity/rustls_backend"]
native_tls_backend = ["tokio", "serenity/native_tls_backend"]

# Tokio v0.2 compatibility
rustls_tokio_0_2_backend = ["tokio_compat", "serenity/rustls_tokio_0_2_backend"]
native_tls_tokio_0_2_backend = ["tokio_compat", "serenity/native_tls_tokio_0_2_backend"]

default_tokio_0_2 = ["cache", "rustls_tokio_0_2_backend"]
default_native_tls_tokio_0_2 = ["cache", "native_tls_tokio_0_2_backend"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["client", "collector", "gateway", "model"]

[dependencies.tokio]
version = "1.0"
default-features = false
optional = true
features = ["rt"]

# Tokio v0.2 compatibility
[dependencies.tokio_compat]
package = "tokio"
version = "0.2"
optional = true
default-features = false
features = ["rt-core"]
