[package]
name = "serenity_utils"
version = "0.7.0"
authors = ["AriusX7 <icyligii@gmail.com>"]
edition = "2021"
license = "ISC"
readme = "README.md"
description = "A library to provide additional utilies for Discord bots created with serenity."
homepage = "https://github.com/AriusX7/serenity-utils"
repository = "https://github.com/AriusX7/serenity-utils"
keywords = ["discord", "serenity", "utilities", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/*"]

[features]
default = ["cache", "rustls_backend"]
default_native_tls = ["cache", "native_tls_backend"]

cache = ["serenity/cache"]
rustls_backend = ["tokio", "serenity/rustls_backend"]
native_tls_backend = ["tokio", "serenity/native_tls_backend"]

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "collector", "gateway", "model"]

[dependencies.tokio]
version = "1.0"
default-features = false
optional = true
features = ["rt"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
