[package]
name = "e01_prompts"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity_utils]
# Using default features.
path = "../../"

[dependencies.serenity]
version = "0.10"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
